Add references from the paper by Cheuk Yin and Yiming on Bernoulli 23.

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 92056beb9a5dfe3c9414b96c2b41ee6ef37ec76f
+% Commit: 0ee229b85bc4d8219ffdd555076e47f7f1813218
 % Date: 2023-03-20
 % ---------------------------
 
@@ -1427,6 +1427,23 @@
   mrclass	= {60B20 (15B52)},
   mrnumber	= {2932624},
   mrreviewer	= {Sasha Sodin}
+}
+
+@Article{	  anderson:55:integral,
+  author	= {Anderson, T. W.},
+  title		= {The integral of a symmetric unimodal function over a
+		  symmetric convex set and some probability inequalities},
+  journal	= {Proc. Amer. Math. Soc.},
+  fjournal	= {Proceedings of the American Mathematical Society},
+  volume	= {6},
+  year		= {1955},
+  pages		= {170--176},
+  issn		= {0002-9939},
+  mrclass	= {27.0X},
+  mrnumber	= {69229},
+  mrreviewer	= {K. L. Chung},
+  doi		= {10.2307/2032333},
+  url		= {https://doi.org/10.2307/2032333}
 }
 
 @Article{	  anderson:58:absence,
@@ -7273,19 +7290,7 @@
   url		= {https://doi.org/10.1007/s11040-021-09380-8}
 }
 
-@InCollection{	  borodin.corwin:14:macdonald,
-  author	= {Borodin, A. and Corwin, I.},
-  title		= {Macdonald processes},
-  booktitle	= {X{VII}th {I}nternational {C}ongress on {M}athematical
-		  {P}hysics},
-  pages		= {292--316},
-  publisher	= {World Sci. Publ., Hackensack, NJ},
-  year		= {2014},
-  mrclass	= {60K35 (60B99 82B23 82C22)},
-  mrnumber	= {3204480}
-}
-
-@Article{	  borodin.corwin:14:macdonald*1,
+@Article{	  borodin.corwin:14:macdonald,
   author	= {Borodin, Alexei and Corwin, Ivan},
   title		= {Macdonald processes},
   journal	= {Probab. Theory Related Fields},
@@ -7300,6 +7305,18 @@
   mrreviewer	= {Rongfeng Sun},
   doi		= {10.1007/s00440-013-0482-3},
   url		= {https://doi.org/10.1007/s00440-013-0482-3}
+}
+
+@InCollection{	  borodin.corwin:14:macdonald*1,
+  author	= {Borodin, A. and Corwin, I.},
+  title		= {Macdonald processes},
+  booktitle	= {X{VII}th {I}nternational {C}ongress on {M}athematical
+		  {P}hysics},
+  pages		= {292--316},
+  publisher	= {World Sci. Publ., Hackensack, NJ},
+  year		= {2014},
+  mrclass	= {60K35 (60B99 82B23 82C22)},
+  mrnumber	= {3204480}
 }
 
 @Article{	  borodin.corwin:14:moments,
@@ -8803,22 +8820,7 @@
   url		= {https://doi.org/10.2307/2154895}
 }
 
-@InCollection{	  cairoli.dalang:95:optimal,
-  author	= {Cairoli, R. and Dalang, Robert C.},
-  title		= {Optimal switching between two {B}rownian motions},
-  booktitle	= {Stochastic analysis ({I}thaca, {NY}, 1993)},
-  series	= {Proc. Sympos. Pure Math.},
-  volume	= {57},
-  pages		= {53--63},
-  publisher	= {Amer. Math. Soc., Providence, RI},
-  year		= {1995},
-  mrclass	= {60G40 (60J65)},
-  mrnumber	= {1335462},
-  doi		= {10.1090/pspum/057/1335462},
-  url		= {https://doi.org/10.1090/pspum/057/1335462}
-}
-
-@Article{	  cairoli.dalang:95:optimal*1,
+@Article{	  cairoli.dalang:95:optimal,
   author	= {Cairoli, R. and Dalang, Robert C.},
   title		= {Optimal switching between two random walks},
   journal	= {Ann. Probab.},
@@ -8832,6 +8834,21 @@
   mrnumber	= {1379177},
   mrreviewer	= {H.-J. Engelbert},
   url		= {http://links.jstor.org/sici?sici=0091-1798(199510)23:4<1982:OSBTRW>2.0.CO;2-P&origin=MSN}
+}
+
+@InCollection{	  cairoli.dalang:95:optimal*1,
+  author	= {Cairoli, R. and Dalang, Robert C.},
+  title		= {Optimal switching between two {B}rownian motions},
+  booktitle	= {Stochastic analysis ({I}thaca, {NY}, 1993)},
+  series	= {Proc. Sympos. Pure Math.},
+  volume	= {57},
+  pages		= {53--63},
+  publisher	= {Amer. Math. Soc., Providence, RI},
+  year		= {1995},
+  mrclass	= {60G40 (60J65)},
+  mrnumber	= {1335462},
+  doi		= {10.1090/pspum/057/1335462},
+  url		= {https://doi.org/10.1090/pspum/057/1335462}
 }
 
 @Book{		  cairoli.dalang:96:sequential,
@@ -20331,6 +20348,20 @@
 @Book{		  erdelyi.magnus.ea:81:higher*1,
   author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
 		  Fritz and Tricomi, Francesco G.},
+  title		= {Higher transcendental functions. {V}ol. {II}},
+  note		= {Based on notes left by Harry Bateman, Reprint of the 1953
+		  original},
+  publisher	= {Robert E. Krieger Publishing Co., Inc., Melbourne, Fla.},
+  year		= {1981},
+  pages		= {xviii+396},
+  isbn		= {0-89874-069-X},
+  mrclass	= {33-02 (01A75)},
+  mrnumber	= {698780}
+}
+
+@Book{		  erdelyi.magnus.ea:81:higher*2,
+  author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
+		  Fritz and Tricomi, Francesco G.},
   title		= {Higher transcendental functions. {V}ol. {I}},
   note		= {Based on notes left by Harry Bateman, With a preface by
 		  Mina Rees, With a foreword by E. C. Watson, Reprint of the
@@ -20341,20 +20372,6 @@
   isbn		= {0-89874-069-X},
   mrclass	= {33-02 (01A75)},
   mrnumber	= {698779}
-}
-
-@Book{		  erdelyi.magnus.ea:81:higher*2,
-  author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
-		  Fritz and Tricomi, Francesco G.},
-  title		= {Higher transcendental functions. {V}ol. {II}},
-  note		= {Based on notes left by Harry Bateman, Reprint of the 1953
-		  original},
-  publisher	= {Robert E. Krieger Publishing Co., Inc., Melbourne, Fla.},
-  year		= {1981},
-  pages		= {xviii+396},
-  isbn		= {0-89874-069-X},
-  mrclass	= {33-02 (01A75)},
-  mrnumber	= {698780}
 }
 
 @Book{		  erdelyi:56:asymptotic,
@@ -27706,6 +27723,25 @@
   mrreviewer	= {Yu. E. Gliklikh},
   doi		= {10.1016/0022-0396(85)90153-6},
   url		= {https://doi.org/10.1016/0022-0396(85)90153-6}
+}
+
+@Article{	  herrell.song.ea:20:sharp,
+  author	= {Herrell, Randall and Song, Renming and Wu, Dongsheng and
+		  Xiao, Yimin},
+  title		= {Sharp space-time regularity of the solution to stochastic
+		  heat equation driven by fractional-colored noise},
+  journal	= {Stoch. Anal. Appl.},
+  fjournal	= {Stochastic Analysis and Applications},
+  volume	= {38},
+  year		= {2020},
+  number	= {4},
+  pages		= {747--768},
+  issn		= {0736-2994},
+  mrclass	= {60G15 (60F25 60G18 60H15 60J55)},
+  mrnumber	= {4112745},
+  mrreviewer	= {Ciprian A. Tudor},
+  doi		= {10.1080/07362994.2020.1721301},
+  url		= {https://doi.org/10.1080/07362994.2020.1721301}
 }
 
 @Article{	  herrero.velazquez:92:approaching,
@@ -35794,6 +35830,23 @@
   url		= {https://doi.org/10.1090/surv/089}
 }
 
+@InCollection{	  ledoux:96:isoperimetry,
+  author	= {Ledoux, Michel},
+  title		= {Isoperimetry and {G}aussian analysis},
+  booktitle	= {Lectures on probability theory and statistics
+		  ({S}aint-{F}lour, 1994)},
+  series	= {Lecture Notes in Math.},
+  volume	= {1648},
+  pages		= {165--294},
+  publisher	= {Springer, Berlin},
+  year		= {1996},
+  mrclass	= {60-02 (60E15 60F10 60G15)},
+  mrnumber	= {1600888},
+  mrreviewer	= {Qi Man Shao},
+  doi		= {10.1007/BFb0095676},
+  url		= {https://doi.org/10.1007/BFb0095676}
+}
+
 @Article{	  lee.leung:17:norm-attaining,
   author	= {Lee, Cheuk-Yin and Leung, Chi-Wai},
   title		= {Norm-attaining property for a dual pair of {B}anach
@@ -36429,6 +36482,22 @@
   url		= {https://doi.org/10.1214/10-AIHP389}
 }
 
+@InCollection{	  li.shao:01:gaussian,
+  author	= {Li, W. V. and Shao, Q.-M.},
+  title		= {Gaussian processes: inequalities, small ball probabilities
+		  and applications},
+  booktitle	= {Stochastic processes: theory and methods},
+  series	= {Handbook of Statist.},
+  volume	= {19},
+  pages		= {533--597},
+  publisher	= {North-Holland, Amsterdam},
+  year		= {2001},
+  mrclass	= {60G15},
+  mrnumber	= {1861734},
+  doi		= {10.1016/S0169-7161(01)19019-X},
+  url		= {https://doi.org/10.1016/S0169-7161(01)19019-X}
+}
+
 @InProceedings{	  li.tai.ea:17:stochastic,
   title		= {Stochastic Modified Equations and Adaptive Stochastic
 		  Gradient Algorithms},
@@ -37045,6 +37114,43 @@
   mrnumber	= {3707240},
   doi		= {10.1016/j.spa.2017.03.013},
   url		= {https://doi.org/10.1016/j.spa.2017.03.013}
+}
+
+@Article{	  luan.xiao:10:chungs,
+  author	= {Luan, Nana and Xiao, Yimin},
+  title		= {Chung's law of the iterated logarithm for anisotropic
+		  {G}aussian random fields},
+  journal	= {Statist. Probab. Lett.},
+  fjournal	= {Statistics \& Probability Letters},
+  volume	= {80},
+  year		= {2010},
+  number	= {23-24},
+  pages		= {1886--1895},
+  issn		= {0167-7152},
+  mrclass	= {60G15 (60F15 60G17 60G60)},
+  mrnumber	= {2734256},
+  mrreviewer	= {Alexander V. Bulinskiu{i}},
+  doi		= {10.1016/j.spl.2010.08.016},
+  url		= {https://doi.org/10.1016/j.spl.2010.08.016}
+}
+
+@Article{	  luan.xiao:12:spectral,
+  author	= {Luan, Nana and Xiao, Yimin},
+  title		= {Spectral conditions for strong local nondeterminism and
+		  exact {H}ausdorff measure of ranges of {G}aussian random
+		  fields},
+  journal	= {J. Fourier Anal. Appl.},
+  fjournal	= {The Journal of Fourier Analysis and Applications},
+  volume	= {18},
+  year		= {2012},
+  number	= {1},
+  pages		= {118--145},
+  issn		= {1069-5869},
+  mrclass	= {60G15 (28A78 60G17 60G60)},
+  mrnumber	= {2885561},
+  mrreviewer	= {Narn-Rueih Shieh},
+  doi		= {10.1007/s00041-011-9193-2},
+  url		= {https://doi.org/10.1007/s00041-011-9193-2}
 }
 
 @Book{		  lukacs:70:characteristic,
@@ -38661,6 +38767,24 @@
   url		= {https://doi.org/10.1051/mmnp/20138201}
 }
 
+@Article{	  meerschaert.wang.ea:13:fernique-type,
+  author	= {Meerschaert, Mark M. and Wang, Wensheng and Xiao, Yimin},
+  title		= {Fernique-type inequalities and moduli of continuity for
+		  anisotropic {G}aussian random fields},
+  journal	= {Trans. Amer. Math. Soc.},
+  fjournal	= {Transactions of the American Mathematical Society},
+  volume	= {365},
+  year		= {2013},
+  number	= {2},
+  pages		= {1081--1107},
+  issn		= {0002-9947},
+  mrclass	= {60G15 (60F15 60G17 60G60)},
+  mrnumber	= {2995384},
+  mrreviewer	= {Lee-Peng Teo},
+  doi		= {10.1090/S0002-9947-2012-05678-9},
+  url		= {https://doi.org/10.1090/S0002-9947-2012-05678-9}
+}
+
 @Article{	  meerson.katzav.ea:16:large,
   author	= {Meerson, Baruch and Katzav, Eytan and Vilenkin, Arkady},
   title		= {Large deviations of surface height in the
@@ -39832,6 +39956,24 @@
   mrreviewer	= {Lihu Xu},
   doi		= {10.1137/120871882},
   url		= {https://doi.org/10.1137/120871882}
+}
+
+@Article{	  monrad.rootzen:95:small,
+  author	= {Monrad, Ditlev and Rootz\'{e}n, Holger},
+  title		= {Small values of {G}aussian processes and functional laws
+		  of the iterated logarithm},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {101},
+  year		= {1995},
+  number	= {2},
+  pages		= {173--192},
+  issn		= {0178-8051},
+  mrclass	= {60F15 (60G15 60G17 60G18)},
+  mrnumber	= {1318191},
+  mrreviewer	= {Karl Grill},
+  doi		= {10.1007/BF01375823},
+  url		= {https://doi.org/10.1007/BF01375823}
 }
 
 @Article{	  moreno-flores.quastel.ea:13:endpoint,
@@ -52506,6 +52648,23 @@
   url		= {http://www.numdam.org/item?id=PMIHES_1995__81__73_0}
 }
 
+@Article{	  talagrand:95:hausdorff,
+  author	= {Talagrand, Michel},
+  title		= {Hausdorff measure of trajectories of multiparameter
+		  fractional {B}rownian motion},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {23},
+  year		= {1995},
+  number	= {2},
+  pages		= {767--775},
+  issn		= {0091-1798},
+  mrclass	= {60G15 (60J65)},
+  mrnumber	= {1334170},
+  mrreviewer	= {Pierre Vallois},
+  url		= {http://links.jstor.org/sici?sici=0091-1798(199504)23:2<767:HMOTOM>2.0.CO;2-P&origin=MSN}
+}
+
 @Article{	  talagrand:96:new,
   author	= {Talagrand, Michel},
   title		= {New concentration inequalities in product spaces},
@@ -53800,23 +53959,6 @@
 
 @Article{	  tracy.widom:16:on,
   author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On the ground state energy of the {$\delta$}-function
-		  {B}ose gas},
-  journal	= {J. Phys. A},
-  fjournal	= {Journal of Physics. A. Mathematical and Theoretical},
-  volume	= {49},
-  year		= {2016},
-  number	= {29},
-  pages		= {294001, 17},
-  issn		= {1751-8113},
-  mrclass	= {82D05},
-  mrnumber	= {3512121},
-  doi		= {10.1088/1751-8113/49/29/294001},
-  url		= {https://doi.org/10.1088/1751-8113/49/29/294001}
-}
-
-@Article{	  tracy.widom:16:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the ground state energy of the delta-function {F}ermi
 		  gas},
   journal	= {J. Math. Phys.},
@@ -53831,6 +53973,23 @@
   mrreviewer	= {Reinhard Redlinger},
   doi		= {10.1063/1.4964252},
   url		= {https://doi.org/10.1063/1.4964252}
+}
+
+@Article{	  tracy.widom:16:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On the ground state energy of the {$\delta$}-function
+		  {B}ose gas},
+  journal	= {J. Phys. A},
+  fjournal	= {Journal of Physics. A. Mathematical and Theoretical},
+  volume	= {49},
+  year		= {2016},
+  number	= {29},
+  pages		= {294001, 17},
+  issn		= {1751-8113},
+  mrclass	= {82D05},
+  mrnumber	= {3512121},
+  doi		= {10.1088/1751-8113/49/29/294001},
+  url		= {https://doi.org/10.1088/1751-8113/49/29/294001}
 }
 
 @Article{	  tracy.widom:17:blocks,
@@ -54631,6 +54790,24 @@
   mrnumber	= {3567931},
   doi		= {10.1016/j.spl.2016.09.026},
   url		= {https://doi.org/10.1016/j.spl.2016.09.026}
+}
+
+@Article{	  tudor.xiao:17:sample,
+  author	= {Tudor, Ciprian A. and Xiao, Yimin},
+  title		= {Sample paths of the solution to the fractional-colored
+		  stochastic heat equation},
+  journal	= {Stoch. Dyn.},
+  fjournal	= {Stochastics and Dynamics},
+  volume	= {17},
+  year		= {2017},
+  number	= {1},
+  pages		= {1750004, 20},
+  issn		= {0219-4937},
+  mrclass	= {60H15 (60G17 60G22 91G70)},
+  mrnumber	= {3583991},
+  mrreviewer	= {Raluca M. Balan},
+  doi		= {10.1142/S0219493717500046},
+  url		= {https://doi.org/10.1142/S0219493717500046}
 }
 
 @Article{	  tudor:04:fractional,
@@ -55878,6 +56055,59 @@
   mrreviewer	= {Wolfgang K\"{o}nig},
   doi		= {10.1142/S0219025705002177},
   url		= {https://doi.org/10.1142/S0219025705002177}
+}
+
+@InCollection{	  xiao:08:strong,
+  author	= {Xiao, Yimin},
+  title		= {Strong local nondeterminism and sample path properties of
+		  {G}aussian random fields},
+  booktitle	= {Asymptotic theory in probability and statistics with
+		  applications},
+  series	= {Adv. Lect. Math. (ALM)},
+  volume	= {2},
+  pages		= {136--176},
+  publisher	= {Int. Press, Somerville, MA},
+  year		= {2008},
+  mrclass	= {60G60 (37A50 60G15 60G17)},
+  mrnumber	= {2466984},
+  mrreviewer	= {Dongsheng Wu}
+}
+
+@InCollection{	  xiao:09:sample,
+  author	= {Xiao, Yimin},
+  title		= {Sample path properties of anisotropic {G}aussian random
+		  fields},
+  booktitle	= {A minicourse on stochastic partial differential
+		  equations},
+  series	= {Lecture Notes in Math.},
+  volume	= {1962},
+  pages		= {145--212},
+  publisher	= {Springer, Berlin},
+  year		= {2009},
+  mrclass	= {60G60 (60D05 60G15 60G17 60G18)},
+  mrnumber	= {2508776},
+  mrreviewer	= {Anne Estrade},
+  doi		= {10.1007/978-3-540-85994-9\_5},
+  url		= {https://doi.org/10.1007/978-3-540-85994-9_5}
+}
+
+@Article{	  xiao:97:holder,
+  author	= {Xiao, Yimin},
+  title		= {H\"{o}lder conditions for the local times and the
+		  {H}ausdorff measure of the level sets of {G}aussian random
+		  fields},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {109},
+  year		= {1997},
+  number	= {1},
+  pages		= {129--157},
+  issn		= {0178-8051},
+  mrclass	= {60G15 (60G17)},
+  mrnumber	= {1469923},
+  mrreviewer	= {Robert J. Adler},
+  doi		= {10.1007/s004400050128},
+  url		= {https://doi.org/10.1007/s004400050128}
 }
 
 @Article{	  xin:98:blowup,
